<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BodyStyle"
    tools:context="com.itechart.covid_tracker.screens.login.view.LoginFragment">

    <!--Enter fields-->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/main"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="25sp"
                android:textColor="@color/alt"/>

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/almostWhite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="25sp"
                android:textColor="@color/alt"/>

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/almostWhite"/>

            <Button
                android:id="@+id/b_sign_in"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="25sp"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/b_google_sign_in"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>